--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   79" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <form action="#" method="post">
-    <label for="fullname>"Name"</label>
+    <label for="fullname>Name</label>
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
     <label for="email">Email</label>
     <input type="email" id="email" name="email" placeholder="email" required>
@@ -28,7 +28,7 @@
     <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
     <label for="message">Message</label>
     <textarea id="message" name="message" rows="10"></textarea>
-    <input type="submit" value="send">  
+    <input type="submit" value="send">
   </form>
 </body>
 </html>
