--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   79" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <form action="#" method="post">
-    <label for="fullname>Name</label>
+    <label for="fullname">Name</label>
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
     <label for="email">Email</label>
     <input type="email" id="email" name="email" placeholder="email" required>
